added another noun
Co-authored-by : Missy Davies <ms.melissadavies@gmail.com>

--- a/templates/game.html
+++ b/templates/game.html
@@ -24,6 +24,10 @@
       <textarea name="adjective"></textarea>
     </div>
     <div>
+      <label>Enter another noun:</label>
+      <textarea name="noun_1"></textarea>
+    </div>
+    <div>
       <input type="submit" value="Submit">
     </div>
   </form>
