Added styling Co-authored-by: Missy Davies <ms.melissadavies@gmail.com>

--- a/templates/game.html
+++ b/templates/game.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
 <head>
+  <link rel = "stylesheet" href ="/static/madlibs.css">
   <title>Give me....</title>
-  <h1>Please give something</h1>
+  <h1>Fill out the form below:</h1>
 </head>
 <body>
 
   <form action="/madlib">
     <div>
       <label>Enter a name:</label>
-      <textarea name="name"></textarea>
+      <textarea name="person"></textarea>
     </div>
     <div>
       <label>Enter a color:</label>
