--- a/templates/madlib.html
+++ b/templates/madlib.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
+    <link rel = "stylesheet" href ="/static/madlibs.css">
     <title>Madlib Story</title>
 </head>
 
 <body>
     <h1>Here is your story</h1>
     <p>
-    There once was a {{ color }} {{ noun }} sitting in the Hackbright Lab.
+    There once was a {{ color }} {{ noun }} sitting next to a {{ noun_1 }} in the Hackbright Lab.
 When {{ person }} went to pick it up, it burst into flames in a totally
 {{ adjective }} way.
     </p>
