--- a/templates/goodbye.html
+++ b/templates/goodbye.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
-    <head>
-        <title>Says Goodbye</title>
-    </head>
+<head>
+    <link rel = "stylesheet" href ="/static/madlibs.css">
+    <title>Says Goodbye</title>
+</head>
 
-    <body>
-        Have a nice day!!
-    </body>
+<body>
+    Have a nice day!!
+</body>
 </html>
